add cors config to security