@@ -64,13 +64,13 @@ public class SecurityConfig {
 
     CorsConfigurationSource apiConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Origen permitido
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE")); // Métodos permitidos
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With")); // Encabezados permitidos
-        configuration.setExposedHeaders(Arrays.asList("Authorization")); // Encabezados expuestos
+        configuration.setAllowedOrigins(List.of(ConsUtils.FRONT_URL));
+        configuration.setAllowedMethods(Arrays.asList(ConsUtils.GET, ConsUtils.POST, ConsUtils.PUT, ConsUtils.DELETE));
+        configuration.setAllowedHeaders(Arrays.asList(ConsUtils.AUTHORIZATION, ConsUtils.CONTENT_TYPE, ConsUtils.REQUESTED_WITH));
+        configuration.setExposedHeaders(Arrays.asList(ConsUtils.AUTHORIZATION));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration(ConsUtils.MATCH_ALL, configuration);
         return source;
     }
 }
